# llama.cpp

./: .gitignore
common/: build-info.cpp  build_info.vcxproj
tests/: .gitignore  CMakeLists.txt  test-loki-action.cpp
tests/fixtures/loki_action/: in.json  out.json  out.toon
tools/: CMakeLists.txt
tools/loki_action/: CMakeLists.txt  README.md  loki_action_api.h  loki_action_internal.h  loki_action_lib.cpp
tools/server/: CMakeLists.txt  CMakeLists_so.txt  llama_server_api.h  llama_server_lib.cpp  server.cpp
